Version 0.18
2006-11-15 Shachar Shemesh
	* Fix bug 1476034 - Make sure that -c works with file lists.
	* Fix bug 1476040 - Uninitialized nesting level caused crashes.

2006-11-14 Shachar Shemesh
	* Remove ODS calls from Windows code - 10 times speedup

2006-02-23 Shachar Shemesh
	* Fixed incorrect permissions when creating the plain text "filemap"
	  file.

2006-02-09 Shachar Shemesh
	* Added a required DEFINE to make sure STLPort compiles on newer Platform
	  SDKs than what comes builtin with Visual Studio 6.

Version 0.17
2006-02-09 Shachar Shemesh
	* Add compilation instructions for Windows
	* Unhandled file types are now skipped with a message, rather than
	  abort the whole process. (Fix bug #1426850)

2006-01-28 Shachar Shemesh
	* Add a tutorial section to the man page.

2006-01-27 Shachar Shemesh
	* Fix a bug with using --filelist and --trim=0 and having an absolute
	  path in the file list

Version 0.16
2005-11-04 Shachar Shemesh
	* Implement filename encryption.
	* --meta-encrypt is now called "--name-encrypt"
	* Added "--ne-nesting" to allow smaller loads of files on each directory.

2005-07-29 Shachar Shemesh
	* Use argtable to print the argument list
	* Add the "--meta-encrypt" option

Version 0.15
2005-05-19 Shachar Shemesh
	* Properly handle CR+LF in text files on Windows
	* Forgot to initialize key size when not explicitly specified.

Version 0.14
2005-05-18 Shachar Shemesh
	* A couple of fixes in the Win32 version resource

2005-05-17 Shachar Shemesh
	* Merge Win32 port into HEAD

2005-05-03 Shachar Shemesh
	* Move from using "getopt_long" for processing command options to
	  using argtable.
	* Fix bugs in the configure script, where if --with-argtable2= was
	  used, then you couldn't override LDFLAGS.
	* Add missing include for "strings.h".
	* rsyncrypto now compiles on Solaris.

Version 0.13
2005-04-23 Shachar Shemesh
	* Update the license to explain author's position that the OpenSSL
	  exception is unnecessary.