@@ -1,0 +1,68 @@
+BASELiNE
+Linux, optimized
+E
+real    0m1.495s
+user    0m0.428s
+sys     0m1.020s
+
+D
+real    0m0.449s
+user    0m0.232s
+sys     0m0.172s
+
+E/D Ratio: 3.329621380846325167
+
+Windows, release
+E
+real    0m6.984s
+user    0m0.030s
+sys     0m0.062s
+
+D
+real    0m1.578s
+user    0m0.015s
+sys     0m0.078s
+
+E/D Ratio: 4.425855513307984791
+
+W/L Ratio: 4.67157190635451505
+
+BASELINE 16M
+Linux
+E
+real    0m14.851s
+user    0m3.948s
+sys     0m10.509s
+
+Windows
+E
+real    1m37.453s
+user    0m0.031s
+sys     0m0.250s
+
+BUFFERED READ
+Linux
+E
+real    0m7.935s
+user    0m3.860s
+sys     0m3.692s
+
+Windows
+E
+real    0m38.953s
+user    0m0.030s
+sys     0m0.937s
+
+BUFFERED READ+WRITE
+Linux
+E
+real    0m4.251s
+user    0m4.068s
+sys     0m0.092s
+
+Windows
+E
+real    0m29.640s
+user    0m0.015s
+sys     0m0.484s
+
